Misc fixes
Fix for another 'Invalid arguments' stack trace error in
admin_addons.php (related to:
http://ocportal.com/tracker/view.php?id=1946) relating to
copyright_attribution. Fix text overlapping icon in
side_printer_friendly block.

--- a/themes/default/css/global.css
+++ b/themes/default/css/global.css
@@ -4381,7 +4381,7 @@ a[rel="lightbox"] {
 /*{+START,IF,{$ADDON_INSTALLED,recommend}}*/
 	.print_icon {
 		background: url('{$IMG;,icons/24x24/links/print}') no-repeat left top !important;
-		padding: 0 0 5px 22px !important;
+		padding: 0 0 5px 32px !important;
 	}
 
 	@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
